[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-101"
version = "0.1.0"
description = "27 practical AI tools (MCP server + CLI) — structured frameworks, data processing, and real computation for writing, analysis, coding, and business tasks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Claude World", email = "hello@claude-world.com" }]
keywords = ["claude", "mcp", "ai-tools", "writing", "analysis", "coding", "business", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
dependencies = [
    "sqlparse>=0.5",
]

[project.urls]
Homepage = "https://github.com/claude-world/claude-101"
Repository = "https://github.com/claude-world/claude-101"
"Bug Tracker" = "https://github.com/claude-world/claude-101/issues"

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
nlp = ["textblob>=0.18"]
dev = ["pytest>=8.0", "ruff>=0.4"]
all = ["mcp[cli]>=1.0", "textblob>=0.18"]

[project.scripts]
claude-101 = "claude_101.cli:main"
claude-101-server = "claude_101.server:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_101"]
